adjust named routes update order
