# config/routes.rb
@@ -17,7 +17,7 @@ Rails.application.routes.draw do
 
   post "api/v1/cart/" => "api/v1/carts#create_order"
   get "api/v1/cart/" => "api/v1/carts#show"
-  post "api/v1/cart/:cart_id/add_item", to: "api/v1/carts#update_order"
+  post "api/v1/cart/:cart_id/update", to: "api/v1/carts#update_order"
   delete "api/v1/cart/:cart_id/:product_id" => "api/v1/carts#remove_order"
   post "api/v1/cart/:cart_id/checkout" => "api/v1/carts#checkout"
   get "api/v1/cart/list_checked_out_orders" => "api/v1/carts#list_checked_out_orders"
