# swagger/v1/swagger.yaml
@@ -86,9 +86,9 @@ paths:
                     type: number
         '404':
           description: not found
-  "/api/v1/cart/{cart_id}/add_item":
+  "/api/v1/cart/{cart_id}/update_item":
     post:
-      summary: add_item_to_cart
+      summary: update_item_to_cart
       tags:
       - Order
       parameters:
@@ -377,7 +377,7 @@ paths:
                   description:
                     type: string
                   price:
-                    type: decimal
+                    type: number
                   quantity:
                     type: integer
                   images:
@@ -397,7 +397,7 @@ paths:
                 description:
                   type: string
                 price:
-                  type: decimal
+                  type: number
                 quantity:
                   type: integer
                 images:
@@ -439,7 +439,7 @@ paths:
                     description:
                       type: string
                     price:
-                      type: decimal
+                      type: number
                     quantity:
                       type: integer
                     images:
@@ -498,7 +498,7 @@ paths:
                   description:
                     type: string
                   price:
-                    type: decimal
+                    type: number
                   quantity:
                     type: integer
                   images:
@@ -520,7 +520,7 @@ paths:
                 description:
                   type: string
                 price:
-                  type: decimal
+                  type: number
                 quantity:
                   type: integer
                 images:
@@ -551,7 +551,7 @@ paths:
                   description:
                     type: string
                   price:
-                    type: decimal
+                    type: number
                   quantity:
                     type: integer
                   images:
@@ -573,7 +573,7 @@ paths:
                 description:
                   type: string
                 price:
-                  type: decimal
+                  type: number
                 quantity:
                   type: integer
                 images:
